# TestModulesCuda

./: !!!.txt  .cursorrules  .gitignore  CLAUDE.md  CMakeLists.txt  Dependencies_Cell412_06ADCImit.md  Doxyfile  main.cpp
.cursor/memory/: project_memory.db
.cursor/rules/: cursorrules.mdc
DataContext/: CMakeLists.txt
DataContext/core/: DContext.cpp  DContext.h  GPUValidationData.h  ValidationConfig.h  Validator.cpp  Validator.h  VectorComparator.hpp
DataContext/core/SignalGenerators/: README.md
DataContext/core/SignalGenerators/include/: signal_generator.h  sine_generator.h
DataContext/core/SignalGenerators/src/: signal_generator.cpp
DataContext/parser/: AddrMapHeader.h  CMakeLists-OOP.txt  FileComparator.h  JsonFileManager.h  JsonSerializable.hpp  RegFileGen.h  RegFileTFP.h  TestDataContainer.h  convert_bin.cpp  convert_bin.h  json_parser.cpp  json_parser.h  main.cpp
Doc/: Rezultat.txt  Vscode.rar  v0 Генератор шума -2.md  v1 Dopolnenie k -2  OptimizedKernel.md  v2 Example_50Rays.md  v3 UnifiedKernel.md  v4 form signal.md  v5 Несущая.md  Генератор шума -0.md  Генератор шума -1.md  Генерация отчета.md
Doc/.Plan_work/: Pl0.txt
Doc/Vscode/: .cursorrules
doxydoc/html/: RandomGeneratorGPU_8h.html  RandomGeneratorGPU_8h__incl.map  RandomGeneratorGPU_8h__incl.md5  RandomGeneratorGPU_8h_source.html  annotated.html  classRandomGeneratorGPU-members.html  classRandomGeneratorGPU.html  classRandomGeneratorGPU__coll__graph.map  classRandomGeneratorGPU__coll__graph.md5  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html
doxydoc/latex/: RandomGeneratorGPU_8h.tex  RandomGeneratorGPU_8h__incl.md5  RandomGeneratorGPU_8h_source.tex  annotated.tex  classRandomGeneratorGPU.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  refman.tex
doxydoc_primer/html/: 223fc_8h.html  223fc_8h__dep__incl.map  223fc_8h__dep__incl.md5  223fc_8h__incl.map  223fc_8h__incl.md5  223fc_8h_source.html  README_8md.html  RPC_8h.html  RPC_8h__dep__incl.map  RPC_8h__dep__incl.md5  RPC_8h__incl.map  RPC_8h__incl.md5  (+2740 more)
src/: RandomGeneratorGPU.cu  RandomGeneratorGPU.h
(+1733 files in other folders)
